STREAM: 2.0

**********************************************************************************
*** ONGOING WORK *****************************************************************
**********************************************************************************

  JBL
  ================================================================================
  * Search for field read and field write references.

  KJ
  ================================================================================
  * Image builder rework

  OT
  ================================================================================
  1GF7GIF: ITPJCORE:WINNT - Outliner works strange on duplicate methods
  1GDGIUP: ITPJCORE:WINNT - SearchableEnvironment - converts char[] to String, which affects performance

  * JCK1.4 compliance diagnosing

  1GK7MHO: ITPJCORE:WIN2000 - JCK 1.4 - BINC - Adding a String field that has the same name as a String field of a superclass
  1GK7VCA: ITPJCORE:WIN2000 - JCK 1.4 - BINC - detection of an IncompatibleClassChangeError
  1GK7UGQ: ITPJCORE:WIN2000 - JCK 1.4 - BINC - Invoke overriding class methods
  1GK7U6C: ITPJCORE:WIN2000 - JCK 1.4 - BINC - Overriding instance and class methods
  1GK7VSN: ITPJCORE:WIN2000 - JCK 1.4 - BINC - the new field is a static (respectively instance) field
  1GK7VMD: ITPJCORE:WIN2000 - JCK 1.4 - BINC - the new field is less accessible than the old one
  1GK7WCP: ITPJCORE:WIN2000 - JCK 1.4 - BINC - the new method is a static (respectively instance) method.
  1GK7VXD: ITPJCORE:WIN2000 - JCK 1.4 - BINC - the new method is less accessible than the old one
  1GK7MEQ: ITPJCORE:WIN2000 - JCK 1.4 - STMT - null literal in throw statement

  DA
  ================================================================================
  * CodeAssist improvements

  JdR
  ================================================================================
  * Java DOM

  PM
  ================================================================================